# SlicerCryoPlanning

./: CMakeLists.txt
CryoControl/: CMakeLists.txt  CryoControl.py
CryoControl/Resources/UI/: CryoControl.ui
ManualPlanning/: CMakeLists.txt  ManualPlanning.py
ManualPlanning/Resources/: New_template.stl  New_templateOld.stl  Template.stl  Template.vtk
ManualPlanning/Resources/UI/: ManualPlanning.ui
